Doc/force-app/main/default/objects/QTC_Mig_OrderHeaders__c/fields/Amount_Transaction_Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transaction_Tax_Total__c</fullName>
    <label>Amount (Transaction Tax Total)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>