Doc/force-app/main/default/objects/QTC_Mig_OrderHeaders__c/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <label>Billing Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>