Doc/force-app/main/default/objects/QTC_Mig_OrderHeaders__c/fields/Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text__c</fullName>
    <label>Formula (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>