Doc/force-app/main/default/objects/QTC_Mig_OrderHeaders__c/fields/OSA_TEXT_for_vlookup__c.field-meta.xml
<CustomField>
    <fullName>OSA_TEXT_for_vlookup__c</fullName>
    <label>OSA TEXT for vlookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>