Doc/force-app/main/default/objects/QTC_Mig_OrderHeaders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Name__c</columns>
    <columns>Currency__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>Date__c</columns>
    <columns>Terms__c</columns>
    <columns>Due_DateReceive_By__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>